# cg-rKit

./: .gitignore  .project_opt  CMakeLists.txt  CONFIG.H  README.md  build.c  welcome_module.cpp
assets/: knitro.option
common/: README.md  csv.cpp  logging.cpp  state.cpp  welcome.cpp
includes/: common.hpp  hello.hpp  welcome_module.hpp
includes/common/: csv.hpp  logger.hpp  state.hpp  welcome.hpp
main/: CMakeLists.txt  welcome.cpp
src/: hello.cpp
tests/: CMakeLists.txt  hello_test.cpp
welcome_module/: CMakeLists.txt  welcome_module_impl.cpp
